--- a/kubernetes/kubernetes.headless-vnc.example.deployment.yaml
+++ b/kubernetes/kubernetes.headless-vnc.example.deployment.yaml
@@ -1,5 +1,5 @@
 #### POD config (run one time)
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: headless-vnc
@@ -8,6 +8,9 @@ metadata:
 spec:
   # 1 Pods should exist at all times.
   replicas: 1
+  selector:
+    matchLabels:
+      application: headless-vnc
   template:
     metadata:
       labels:
@@ -16,25 +19,25 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: headless-vnc
-        image: consol/centos-xfce-vnc
+        image: icsforth/ubuntu-xfce-vnc
         imagePullPolicy: Always
         args:
           ### make normal UI startup to connect via: oc rsh <pod-name> bash
           #- '--tail-log'
         ### checks that vnc server is up and running
-        livenessProbe:
-          tcpSocket:
-            port: 5901
-          initialDelaySeconds: 1
-          timeoutSeconds: 1
+        #livenessProbe:
+        #  tcpSocket:
+        #    port: 5901
+        #  initialDelaySeconds: 1
+        #  timeoutSeconds: 10
         ### checks if http-vnc connection is working
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 6901
-            scheme: HTTP
-          initialDelaySeconds: 1
-          timeoutSeconds: 1
+        #readinessProbe:
+        #  httpGet:
+        #    path: /
+        #    port: 6901
+        #    scheme: HTTP
+        #  initialDelaySeconds: 1
+        #  timeoutSeconds: 10
 ---
 apiVersion: v1
 kind: Service
