--- a/kubernetes/kubernetes.headless-vnc.example.deployment.yaml
+++ b/kubernetes/kubernetes.headless-vnc.example.deployment.yaml
@@ -52,14 +52,31 @@ spec:
     protocol: TCP
     port: 6901
     targetPort: 6901
-    nodePort: 32001
   - name: vnc-port-tcp
     protocol: TCP
     port: 5901
     targetPort: 5901
-    nodePort: 32002
   selector:
     application: headless-vnc
   type: NodePort
 # Use type loadbalancer if needed
 #  type: LoadBalancer
+#
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: virtualdesktop
+spec:
+      rules:
+        - host: virtualdesktop.localhost
+          http:
+            paths:
+              - path: /
+                pathType: Prefix
+                backend:
+                  service:
+                    name: headless-vnc
+                    port:
+                      number: 6901
+
